# fsm-analyser

./: .gitignore  CMakeLists.txt  Makefile  README.md  compare.txt
data/datasets/1/: end_states.txt
data/datasets/2/: end_states.txt
data/datasets/3/: end_states.txt
data/test_ds1/: end_states.txt
include/: Analyzer.h  Parser.h  Reporter.h  types.h
src/: Analyzer.cpp  Parser.cpp  Reporter.cpp  main.cpp
tests/: test.cpp
